[gd_scene load_steps=10 format=3 uid="uid://douf6coesjjjs"]

[ext_resource type="Script" path="res://scenes/car.gd" id="1_eu15g"]
[ext_resource type="ArrayMesh" uid="uid://mvrt6iugkoqu" path="res://assets/Standard.obj" id="2_e6te5"]
[ext_resource type="ArrayMesh" uid="uid://dgem4hmcjjioa" path="res://assets/Tire/1365 Tire.obj" id="3_21c8e"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kixoo"]
friction = 0.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_i647g"]
points = PackedVector3Array(1.37349, -0.0382355, 0.979573, 1.34069, -0.599176, -2.67994, 1.37349, -0.0382355, -0.500513, 1.12316, 0.91576, 1.34552, 1.34069, -0.593428, 3.971, 1.30761, -1.02494, -2.59855, -1.34096, -0.599176, -2.67994, 0.653673, -0.582923, -2.67994, 0, -0.139324, -2.66562, 0.669806, -0.157758, -2.66562, 1.24012, -0.177381, -2.66562, 1.30761, -1.02494, 3.89481, 1.12316, 0.91576, -0.672419, 0, 1, 1.34552, 1.27158, -0.332779, 3.9723, 1.27158, -0.242791, 3.67993, -1.34096, -0.593428, 3.971, -1.30788, -1.02494, -2.59855, -1.37349, -0.0382355, 0.979573, -1.37349, -0.0382355, -0.500513, -1.24039, -0.177381, -2.66562, -0.670075, -0.157758, -2.66562, -0.653942, -0.582923, -2.67994, -1.30788, -1.02494, 3.89481, 0, -0.56766, -2.67994, 0, 1, -0.672419, -1.27185, -0.332779, 3.9723, -0.670075, -0.313354, 3.9723, 0, -0.294722, 3.9723, 0.669806, -0.313354, 3.9723, -1.12342, 0.91576, 1.34552, -1.27185, -0.242791, 3.67993, -1.12342, 0.91576, -0.672419)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ixehm"]
points = PackedVector3Array(-0.000408888, 9.1682, 9.16994, -3.00996, 9.1682, 8.76243, -3.00996, 4.78775, 7.58834, -0.000408888, 4.58309, 7.94021, 3.00914, 4.78775, 7.58834, 3.00914, 9.1682, 8.76243, 3.00914, 13.5505, 7.58834, 1.67736, 13.633, 7.73016, -1.67818, 13.633, 7.73016, -3.00996, 13.5505, 7.58834, -3.5797, 9.1682, 8.09819, -3.5797, 5.11988, 7.01386, -3.5797, 13.2183, 7.01386, -3.00996, 1.57961, 4.38024, -0.000408888, 1.22774, 4.5849, 3.00914, 1.57961, 4.38024, 3.5796, 5.11988, 7.01386, 3.5796, 9.1682, 8.09819, 3.5796, 13.2183, 7.01386, 3.00914, 16.7586, 4.38024, 1.67736, 16.9004, 4.46283, -1.67818, 16.9004, 4.46283, -3.00996, 16.7586, 4.38024, -3.5797, 2.1541, 4.04813, -3.5797, 16.1841, 4.04813, -3.00996, 0.405506, -0.00014019, -0.000408888, -0.000224, -0.00014019, 3.00914, 0.405506, -0.00014019, 3.5796, 2.1541, 4.04813, 3.7147, 7.88638, 2.18108, 3.7147, 9.18795, 2.52935, 3.7147, 10.4177, 2.20082, 3.5796, 16.1841, 4.04813, 3.00914, 17.9327, -0.00014019, -0.000408888, 18.3402, -0.00014019, -3.00996, 17.9327, -0.00014019, -3.5797, 1.06976, -0.00014019, -3.5797, 17.2684, -0.00014019, -0.000408888, 1.22774, -4.58698, -3.5797, 2.1541, -4.0502, -3.00996, 1.57961, -4.38232, 3.5796, 1.06976, -0.00014019, 3.00914, 1.57961, -4.38232, 3.5796, 2.1541, -4.0502, 3.7147, 6.98695, 1.28166, 3.72328, 7.88459, 1.28346, 3.72328, 9.63856, 1.75381, 3.72328, 10.924, 0.468417, 3.7147, 11.3692, 1.24755, 3.5796, 17.2684, -0.00014019, 3.7147, 11.6995, 0.0178118, 3.5796, 16.1841, -4.0502, 3.00914, 16.7586, -4.38232, -0.000408888, 17.1105, -4.58698, -3.00996, 16.7586, -4.38232, -3.5797, 16.1841, -4.0502, -0.000408888, 4.58309, -7.94228, -3.5797, 5.11988, -7.01594, -3.00996, 4.78775, -7.59041, 3.7147, 6.96721, -1.24963, 3.7147, 6.63867, -0.0198879, 3.00914, 4.78775, -7.59041, 3.5796, 5.11988, -7.01594, 3.72328, 7.41423, -0.470493, 3.72328, 10.4536, -1.28553, 3.7147, 11.3512, -1.28374, 3.5796, 13.2183, -7.01594, 3.00914, 13.5505, -7.59041, -0.000408888, 13.7533, -7.94228, -3.00996, 13.5505, -7.59041, -3.5797, 13.2183, -7.01594, -3.00996, 9.1682, -8.7645, -0.000408888, 9.1682, -9.17022, 3.00914, 9.1682, -8.7645, -3.5797, 9.1682, -8.10026, 3.7147, 7.92049, -2.2029, 3.5796, 9.1682, -8.10026, 3.72328, 8.69964, -1.75588, 3.7147, 10.4518, -2.18315, 3.7147, 9.15025, -2.53143)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_j2778"]
points = PackedVector3Array(-0.000408888, 9.1682, 9.16994, -3.00996, 9.1682, 8.76243, -3.00996, 4.78775, 7.58834, -0.000408888, 4.58309, 7.94021, 3.00914, 4.78775, 7.58834, 3.00914, 9.1682, 8.76243, 3.00914, 13.5505, 7.58834, 1.67736, 13.633, 7.73016, -1.67818, 13.633, 7.73016, -3.00996, 13.5505, 7.58834, -3.5797, 9.1682, 8.09819, -3.5797, 5.11988, 7.01386, -3.5797, 13.2183, 7.01386, -3.00996, 1.57961, 4.38024, -0.000408888, 1.22774, 4.5849, 3.00914, 1.57961, 4.38024, 3.5796, 5.11988, 7.01386, 3.5796, 9.1682, 8.09819, 3.5796, 13.2183, 7.01386, 3.00914, 16.7586, 4.38024, 1.67736, 16.9004, 4.46283, -1.67818, 16.9004, 4.46283, -3.00996, 16.7586, 4.38024, -3.5797, 2.1541, 4.04813, -3.5797, 16.1841, 4.04813, -3.00996, 0.405506, -0.00014019, -0.000408888, -0.000224, -0.00014019, 3.00914, 0.405506, -0.00014019, 3.5796, 2.1541, 4.04813, 3.7147, 7.88638, 2.18108, 3.7147, 9.18795, 2.52935, 3.7147, 10.4177, 2.20082, 3.5796, 16.1841, 4.04813, 3.00914, 17.9327, -0.00014019, -0.000408888, 18.3402, -0.00014019, -3.00996, 17.9327, -0.00014019, -3.5797, 1.06976, -0.00014019, -3.5797, 17.2684, -0.00014019, -0.000408888, 1.22774, -4.58698, -3.5797, 2.1541, -4.0502, -3.00996, 1.57961, -4.38232, 3.5796, 1.06976, -0.00014019, 3.00914, 1.57961, -4.38232, 3.5796, 2.1541, -4.0502, 3.7147, 6.98695, 1.28166, 3.72328, 7.88459, 1.28346, 3.72328, 9.63856, 1.75381, 3.72328, 10.924, 0.468417, 3.7147, 11.3692, 1.24755, 3.5796, 17.2684, -0.00014019, 3.7147, 11.6995, 0.0178118, 3.5796, 16.1841, -4.0502, 3.00914, 16.7586, -4.38232, -0.000408888, 17.1105, -4.58698, -3.00996, 16.7586, -4.38232, -3.5797, 16.1841, -4.0502, -0.000408888, 4.58309, -7.94228, -3.5797, 5.11988, -7.01594, -3.00996, 4.78775, -7.59041, 3.7147, 6.96721, -1.24963, 3.7147, 6.63867, -0.0198879, 3.00914, 4.78775, -7.59041, 3.5796, 5.11988, -7.01594, 3.72328, 7.41423, -0.470493, 3.72328, 10.4536, -1.28553, 3.7147, 11.3512, -1.28374, 3.5796, 13.2183, -7.01594, 3.00914, 13.5505, -7.59041, -0.000408888, 13.7533, -7.94228, -3.00996, 13.5505, -7.59041, -3.5797, 13.2183, -7.01594, -3.00996, 9.1682, -8.7645, -0.000408888, 9.1682, -9.17022, 3.00914, 9.1682, -8.7645, -3.5797, 9.1682, -8.10026, 3.7147, 7.92049, -2.2029, 3.5796, 9.1682, -8.10026, 3.72328, 8.69964, -1.75588, 3.7147, 10.4518, -2.18315, 3.7147, 9.15025, -2.53143)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_x5l8q"]
points = PackedVector3Array(-0.000408888, 9.1682, 9.16994, -3.00996, 9.1682, 8.76243, -3.00996, 4.78775, 7.58834, -0.000408888, 4.58309, 7.94021, 3.00914, 4.78775, 7.58834, 3.00914, 9.1682, 8.76243, 3.00914, 13.5505, 7.58834, 1.67736, 13.633, 7.73016, -1.67818, 13.633, 7.73016, -3.00996, 13.5505, 7.58834, -3.5797, 9.1682, 8.09819, -3.5797, 5.11988, 7.01386, -3.5797, 13.2183, 7.01386, -3.00996, 1.57961, 4.38024, -0.000408888, 1.22774, 4.5849, 3.00914, 1.57961, 4.38024, 3.5796, 5.11988, 7.01386, 3.5796, 9.1682, 8.09819, 3.5796, 13.2183, 7.01386, 3.00914, 16.7586, 4.38024, 1.67736, 16.9004, 4.46283, -1.67818, 16.9004, 4.46283, -3.00996, 16.7586, 4.38024, -3.5797, 2.1541, 4.04813, -3.5797, 16.1841, 4.04813, -3.00996, 0.405506, -0.00014019, -0.000408888, -0.000224, -0.00014019, 3.00914, 0.405506, -0.00014019, 3.5796, 2.1541, 4.04813, 3.7147, 7.88638, 2.18108, 3.7147, 9.18795, 2.52935, 3.7147, 10.4177, 2.20082, 3.5796, 16.1841, 4.04813, 3.00914, 17.9327, -0.00014019, -0.000408888, 18.3402, -0.00014019, -3.00996, 17.9327, -0.00014019, -3.5797, 1.06976, -0.00014019, -3.5797, 17.2684, -0.00014019, -0.000408888, 1.22774, -4.58698, -3.5797, 2.1541, -4.0502, -3.00996, 1.57961, -4.38232, 3.5796, 1.06976, -0.00014019, 3.00914, 1.57961, -4.38232, 3.5796, 2.1541, -4.0502, 3.7147, 6.98695, 1.28166, 3.72328, 7.88459, 1.28346, 3.72328, 9.63856, 1.75381, 3.72328, 10.924, 0.468417, 3.7147, 11.3692, 1.24755, 3.5796, 17.2684, -0.00014019, 3.7147, 11.6995, 0.0178118, 3.5796, 16.1841, -4.0502, 3.00914, 16.7586, -4.38232, -0.000408888, 17.1105, -4.58698, -3.00996, 16.7586, -4.38232, -3.5797, 16.1841, -4.0502, -0.000408888, 4.58309, -7.94228, -3.5797, 5.11988, -7.01594, -3.00996, 4.78775, -7.59041, 3.7147, 6.96721, -1.24963, 3.7147, 6.63867, -0.0198879, 3.00914, 4.78775, -7.59041, 3.5796, 5.11988, -7.01594, 3.72328, 7.41423, -0.470493, 3.72328, 10.4536, -1.28553, 3.7147, 11.3512, -1.28374, 3.5796, 13.2183, -7.01594, 3.00914, 13.5505, -7.59041, -0.000408888, 13.7533, -7.94228, -3.00996, 13.5505, -7.59041, -3.5797, 13.2183, -7.01594, -3.00996, 9.1682, -8.7645, -0.000408888, 9.1682, -9.17022, 3.00914, 9.1682, -8.7645, -3.5797, 9.1682, -8.10026, 3.7147, 7.92049, -2.2029, 3.5796, 9.1682, -8.10026, 3.72328, 8.69964, -1.75588, 3.7147, 10.4518, -2.18315, 3.7147, 9.15025, -2.53143)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_manjx"]
points = PackedVector3Array(-0.000408888, 9.1682, 9.16994, -3.00996, 9.1682, 8.76243, -3.00996, 4.78775, 7.58834, -0.000408888, 4.58309, 7.94021, 3.00914, 4.78775, 7.58834, 3.00914, 9.1682, 8.76243, 3.00914, 13.5505, 7.58834, 1.67736, 13.633, 7.73016, -1.67818, 13.633, 7.73016, -3.00996, 13.5505, 7.58834, -3.5797, 9.1682, 8.09819, -3.5797, 5.11988, 7.01386, -3.5797, 13.2183, 7.01386, -3.00996, 1.57961, 4.38024, -0.000408888, 1.22774, 4.5849, 3.00914, 1.57961, 4.38024, 3.5796, 5.11988, 7.01386, 3.5796, 9.1682, 8.09819, 3.5796, 13.2183, 7.01386, 3.00914, 16.7586, 4.38024, 1.67736, 16.9004, 4.46283, -1.67818, 16.9004, 4.46283, -3.00996, 16.7586, 4.38024, -3.5797, 2.1541, 4.04813, -3.5797, 16.1841, 4.04813, -3.00996, 0.405506, -0.00014019, -0.000408888, -0.000224, -0.00014019, 3.00914, 0.405506, -0.00014019, 3.5796, 2.1541, 4.04813, 3.7147, 7.88638, 2.18108, 3.7147, 9.18795, 2.52935, 3.7147, 10.4177, 2.20082, 3.5796, 16.1841, 4.04813, 3.00914, 17.9327, -0.00014019, -0.000408888, 18.3402, -0.00014019, -3.00996, 17.9327, -0.00014019, -3.5797, 1.06976, -0.00014019, -3.5797, 17.2684, -0.00014019, -0.000408888, 1.22774, -4.58698, -3.5797, 2.1541, -4.0502, -3.00996, 1.57961, -4.38232, 3.5796, 1.06976, -0.00014019, 3.00914, 1.57961, -4.38232, 3.5796, 2.1541, -4.0502, 3.7147, 6.98695, 1.28166, 3.72328, 7.88459, 1.28346, 3.72328, 9.63856, 1.75381, 3.72328, 10.924, 0.468417, 3.7147, 11.3692, 1.24755, 3.5796, 17.2684, -0.00014019, 3.7147, 11.6995, 0.0178118, 3.5796, 16.1841, -4.0502, 3.00914, 16.7586, -4.38232, -0.000408888, 17.1105, -4.58698, -3.00996, 16.7586, -4.38232, -3.5797, 16.1841, -4.0502, -0.000408888, 4.58309, -7.94228, -3.5797, 5.11988, -7.01594, -3.00996, 4.78775, -7.59041, 3.7147, 6.96721, -1.24963, 3.7147, 6.63867, -0.0198879, 3.00914, 4.78775, -7.59041, 3.5796, 5.11988, -7.01594, 3.72328, 7.41423, -0.470493, 3.72328, 10.4536, -1.28553, 3.7147, 11.3512, -1.28374, 3.5796, 13.2183, -7.01594, 3.00914, 13.5505, -7.59041, -0.000408888, 13.7533, -7.94228, -3.00996, 13.5505, -7.59041, -3.5797, 13.2183, -7.01594, -3.00996, 9.1682, -8.7645, -0.000408888, 9.1682, -9.17022, 3.00914, 9.1682, -8.7645, -3.5797, 9.1682, -8.10026, 3.7147, 7.92049, -2.2029, 3.5796, 9.1682, -8.10026, 3.72328, 8.69964, -1.75588, 3.7147, 10.4518, -2.18315, 3.7147, 9.15025, -2.53143)

[node name="Car" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_kixoo")
script = ExtResource("1_eu15g")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.841511, 0.54024, 0, -0.54024, 0.841511, 0, 14.462, 11.842)

[node name="Standard" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("2_e6te5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_i647g")

[node name="fr_tire" type="MeshInstance3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, 1.11103, -1.42053, -3.13166)
mesh = ExtResource("3_21c8e")

[node name="fr_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, 1.11103, -1.42053, -3.13166)
shape = SubResource("ConvexPolygonShape3D_ixehm")

[node name="fl_tire" type="MeshInstance3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, -1.111, -1.421, -3.132)
mesh = ExtResource("3_21c8e")
skeleton = NodePath("../fr_tire")

[node name="fl_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, -1.111, -1.421, -3.132)
shape = SubResource("ConvexPolygonShape3D_j2778")

[node name="br_tire" type="MeshInstance3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, 1.111, -1.421, 0.980104)
mesh = ExtResource("3_21c8e")
skeleton = NodePath("../fr_tire")

[node name="br_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, 1.111, -1.421, 0.980104)
shape = SubResource("ConvexPolygonShape3D_x5l8q")

[node name="bl_tire" type="MeshInstance3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, -1.111, -1.421, 0.980104)
mesh = ExtResource("3_21c8e")
skeleton = NodePath(".")

[node name="bl_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.044, 0, 0, 0, 0.044, 0, 0, 0, 0.044, -1.111, -1.421, 0.980104)
shape = SubResource("ConvexPolygonShape3D_manjx")

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(-0.997135, -0.0223686, 0.072257, -1.16806e-08, 0.955273, 0.295724, -0.0756401, 0.294877, -0.952537, 0.191777, 0.810939, -8.11335)
current = true
